--- a/templates/shared/block_nav_footer.ejs
+++ b/templates/shared/block_nav_footer.ejs
@@ -1,5 +1,5 @@
   <!--footer-->
-  <footer class="GreyBg100">
+  <footer class="footerBg">
 
     <div class="blankHS"></div>
     <div class="wrapper">
