--- a/templates/about/index.ejs
+++ b/templates/about/index.ejs
@@ -13,15 +13,56 @@
   <%- include(`${templatePath}/shared/block_nav_header`, {type:'main', currentPage: 'ABOUT' }) %>
 
   <div class="blankHM"></div>
-  <%- include('../shared/intro', { version: 'defult',
-    contents: ['UX', 'Design', 'Architecture', 'Art'],
-    
+  <%- include(`${templatePath}/shared/base_greeting`,{greetingTxt:`hi there!`}) %>
 
-    layoutType: 'aboutPage'
-}) %>
+  <%- include(`${templatePath}/shared/comp_titleWeb`,{
+    introTitle1: `UX`,
+    divider1: true, 
+    introTitle2: `Design`,
+    divider2: true, 
+    introTitle3: `Architecture`,
+    divider3: true, 
+    introTitle4: `Art`
+  }) %>
+  <div class="wrapper">
+    <div class="Grid Grid--full Grid--gutters">
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="rowToColumn centerVH">
+            <div class="widthMax">
+              <div class="Grid-cell">
+                <h3>As a UX designer, I possess a diverse range of skills and have gained experience in
+                  startup
+                  environments. I am fully involved in every aspect of the design process and continuously
+                  aim to create
+                  seamless user experiences that align with business objectives. My approach emphasizes
+                  simplicity, using
+                  the fewest design elements necessary to address core issues effectively.</h3>
+                <h3>My fascination with craftsmanship extends beyond just UX. It is evident both in the art
+                  of crafting
+                  user-centric interfaces and in appreciating the finer details of everyday life.
+                </h3>
+                <h3>I take pleasure in immersing myself in new technologies. Doing so not only fosters
+                  smoother
+                  collaboration with developers but also deepens my understanding of design, ultimately
+                  driving
+                  productivity.</h3>
+              </div>
+            </div>
+            <div class="paddingleft">
+              <div class="widthFitContent">
+                <img class="widthS" src="/about/me.jpg" alt="icon arrow">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
 
   <!--Arrow subtitle-->
-  <%- include('../shared/comp_content_subtitle_arrow', {message: 'Method & Importance' }) %>
+  <%- include('../shared/comp_textualElements_arrow', {message: 'Method & Importance' }) %>
   <!--Arrow subtitle-->
 
   
@@ -86,7 +127,7 @@
   <!-- My Journey -->
 
   <!--Arrow subtitle-->
-  <%- include('../shared/comp_content_subtitle_arrow', {message: 'My Journey' }) %>
+  <%- include('../shared/comp_textualElements_arrow', {message: 'My Journey' }) %>
   <!--Arrow subtitle-->
 
   <div class="wrapper">
@@ -151,7 +192,7 @@
   </div>
 
     <!--Arrow subtitle-->
-    <%- include('../shared/comp_content_subtitle_arrow', {message: 'About Me' }) %>
+    <%- include('../shared/comp_textualElements_arrow', {message: 'About Me' }) %>
     <!--Arrow subtitle-->
   <!-- My Journey -->
   <div class="wrapper">
@@ -338,7 +379,7 @@
 
 
   <!-- Shared across the platform -->
-  <%- include(`${templatePath}/shared/comp_content_subtitle_arrow`, {message: 'Skills & Experiences' }) %>
+  <%- include(`${templatePath}/shared/comp_textualElements_arrow`, {message: 'Skills & Experiences' }) %>
   <%- include(`${templatePath}/shared/comp_tagCloud`) %>
   <%- include(`${templatePath}/shared/comp_closingMessage`, { version: 'addMessage', message: `          Thank you for dropping by! If you have any feedback about this site or would like to get in touch, please feel
   free to shoot me an <a href="mailto:vickyw.design@gmail.com" class="textUnderline"> email</a>&#33;
