site structure update

--- a/templates/about/index.ejs
+++ b/templates/about/index.ejs
@@ -32,21 +32,15 @@
             <div class="widthMax">
               <div class="Grid-cell">
                 <h3>As a UX designer, I possess a diverse range of skills and have gained experience in
-                  startup
-                  environments. I am fully involved in every aspect of the design process and continuously
-                  aim to create
-                  seamless user experiences that align with business objectives. My approach emphasizes
-                  simplicity, using
-                  the fewest design elements necessary to address core issues effectively.</h3>
+                  startup environments. I am fully involved in every aspect of the design process and continuously
+                  aim to create seamless user experiences that align with business objectives. My approach emphasizes
+                  simplicity, using the fewest design elements necessary to address core issues effectively.</h3>
                 <h3>My fascination with craftsmanship extends beyond just UX. It is evident both in the art
-                  of crafting
-                  user-centric interfaces and in appreciating the finer details of everyday life.
+                  of crafting user-centric interfaces and in appreciating the finer details of everyday life.
                 </h3>
                 <h3>I take pleasure in immersing myself in new technologies. Doing so not only fosters
-                  smoother
-                  collaboration with developers but also deepens my understanding of design, ultimately
-                  driving
-                  productivity.</h3>
+                  smoother collaboration with developers but also deepens my understanding of design, ultimately
+                  driving productivity.</h3>
               </div>
             </div>
             <div class="paddingleft">
