--- a/templates/shared/comp_titleWeb.ejs
+++ b/templates/shared/comp_titleWeb.ejs
@@ -22,54 +22,65 @@
     divider3 = ''; 
   } 
   %>
+<% if (typeof shareSocialMedia === 'undefined') { 
+  shareSocialMedia = ''; 
+} 
+%>
 <div class="wrapper">
   <div class="Grid Grid--gutters">
     <div class="Grid-cell">
 
-    <div class="row">
-      <div class="widthMax">
-        <div class="element">
-          <strong>
-            <div class="intro aos-init aos-animate" data-aos="fade-up">
-              <h1> <%= introTitle1 %> </h1>
-              <% if (divider1 === true) { %>
-              <span class="divider1"></span>
-              <% } else { %>
-              <% } %>
+      <div class="row">
+        <div class="widthMax">
+          <div class="element">
+            <strong>
+              <div class="intro aos-init aos-animate" data-aos="fade-up">
+                <h1> <%= introTitle1 %> </h1>
+                <% if (divider1 === true) { %>
+                <span class="divider1"></span>
+                <% } else { %>
+                <% } %>
 
-              <h1> <%= introTitle2 %> </h1>
-              <% if (divider2 === true) { %>
-              <span class="divider1"></span>
-              <% } else { %>
-              <% } %>
+                <h1> <%= introTitle2 %> </h1>
+                <% if (divider2 === true) { %>
+                <span class="divider1"></span>
+                <% } else { %>
+                <% } %>
 
 
-              <h1> <%= introTitle3 %> </h1>
+                <h1> <%= introTitle3 %> </h1>
 
-              <% if (divider3 === true) { %>
-              <span class="divider1"></span>
-              <% } else { %>
-              <% } %>
+                <% if (divider3 === true) { %>
+                <span class="divider1"></span>
+                <% } else { %>
+                <% } %>
 
-              <h1> <%= introTitle4 %> </h1>
-            </div>
-          </strong>
-        </div>
-      </div>
-      <div class="paddingleft">
-        <div class="element">
-          <div class="widthFitContent">
-            <div class="dropdownSM">
-              <img title="Share" class="iconS hoverGrey100 paddingM borderRadiusMax dropbtn" src="/icon/share.svg" alt="Share">
-              <div class="dropdownSM-content">
-                <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://vickywang.me" target="_blank">Share
-                  on LinkedIn</a>
-                <a href="https://pinterest.com/pin/create/button/?url=https://vickywang.me&amp;media=https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_mobile.svg&amp;description=Skilled%20UX%20Designer%20for%20B2B%20Solutions%20%26%20Consumer%20Apps%20-%20Vicky%20Wang" target="_blank">Share on Pinterest</a>
+                <h1> <%= introTitle4 %> </h1>
               </div>
-            </div>
+            </strong>
           </div>
         </div>
+        <% if (shareSocialMedia === ``) { %>
+          <div class="paddingleft">
+            <div class="element">
+              <div class="widthFitContent">
+                <div class="dropdownSM">
+                  <img title="Share" class="iconS hoverGrey100 paddingM borderRadiusMax dropbtn" src="/icon/share.svg" alt="Share">
+                  <div class="dropdownSM-content">
+                    <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://vickywang.me" target="_blank">Share
+                      on LinkedIn</a>
+                    <a href="https://pinterest.com/pin/create/button/?url=https://vickywang.me&amp;media=https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_mobile.svg&amp;description=Skilled%20UX%20Designer%20for%20B2B%20Solutions%20%26%20Consumer%20Apps%20-%20Vicky%20Wang" target="_blank">Share on Pinterest</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div> 
+        <% } else { %>
+
+
+        <% } %>
+
       </div>
     </div>
   </div>
-</div></div>
+</div>
