--- a/templates/glorify/index.ejs
+++ b/templates/glorify/index.ejs
@@ -1,165 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!-- Basic Metadata -->
-  <link rel="canonical" href="https://vickywang.me/glorify">
-  <title>Enhancing Community Engagement in Glorify - Vicky Wang</title>
-  <meta name="author" content="Vicky W.">
-  <meta name="description"
-    content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
-  <!-- Open Graph / Facebook -->
-  <meta property="og:locale" content="en_US">
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="Enhancing Community Engagement in Glorify - Vicky Wang">
-  <meta property="og:description"
-    content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
-  <meta property="og:url" content="https://vickywang.me/glorify">
-  <meta property="og:site_name" content="Vicky's Website">
-  <meta property="og:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
-
-  <!-- Twitter -->
-  <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://vickywang.me/glorify">
-  <meta property="twitter:title" content="Enhancing Community Engagement in Glorify - Vicky Wang">
-  <meta property="twitter:description"
-    content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
-  <meta property="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
-
-  <!-- favicon -->
-
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
-
-
-
-  <!-- Google Font Preconnect-->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <!-- Google Font Preconnect-->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
-    rel="stylesheet">
-  <!--sitewide font-family: 'Lato', sans-serif; -->
-  <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Caveat:wght@400;500;600;700&display=swap"
-    rel="stylesheet">
-  <!--handwriting -  font-family: 'Caveat', sans-serif; -->
-  <!--handwriting -  font-family: 'Caveat Brush', sans-serif; -->
-
-  <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
-  <!--handwriting font-family: 'Indie Flower'; -->
-
-  <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
-  <!--handwriting font-family: 'Gloria Hallelujah';  | Hello font|-->
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"
-    integrity="sha512-E8QSvWZ0eCLGk4km3hxSsNmGWbLtSCSUcewDQPQWZF6pEU8GlT8a5fF32wOl1i8ftdMhssTrF/OhyGWwonTcXA=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <!-- crypto js -->
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  <!--jQuery-->
-
-  <!--aos-->
-  <script type="text/javascript" src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-
-
-  <!-- google analytics-->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-E8YXDWJST2"></script>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-
-    gtag('config', 'G-E8YXDWJST2');
-  </script>
-
-  <link rel="stylesheet" href="../main.css">
-  <script type="text/javascript" src="../scripts.js"></script>
-  <script type="text/javascript" src="../scripts_project.js"></script>
-
-
-</head>
+<!--Head-->
+<%- include(`${templatePath}/shared/head`, {SEO:true, Title:'Glorify: Transforming Solitary Devotion into Community Engagement by Vicky Wang', 
+description:`This case study explores the evolution of the Glorify app, a mobile platform dedicated to enhancing individual spiritual journeys, into a vibrant community hub for collective faith building.`, 
+pageURL:'glorify/', thumbnailImgURL: 'vickywang_web.png'
+}) %>
+<!--Head-->
 
 <body>
-  <!--progressBarScroll-->
-  <div class="progressContainer">
-    <div class="progress-container">
-      <div class="progress-bar GLORIFY" id="progressBar"></div>
-    </div>
-  </div>
-  <!--progressBarScroll-->
-  <nav class="header" id="header">
-    <div class="backgroundColorNav">
-      <a href="http://vickywang.me/"><img class="logo pointer" src="../icon/LOGO.svg" alt="VW" title="vickywang.me"></a>
-      <div class="navbar">
-        <ul class="nav-menu">
-          <li class="dropdown nav-item active activeNav marginZero"><a href="/" class="nav-link box">PROJECT</a>
-            <div class="dropdown-content">
-
-              <a href="/seer/">
-                <div class="SEER">
-                  <img src="../ProjectImages/Cover_SEER.png" alt="SEER">
-                  <div class="element">
-                    <h5 class="colorBlack">SEER | Marketing Manager Tracking Business Performance</h5>
-                  </div>
-                </div>
-              </a>
-              <a href="/appointa/">
-                <div class="APPOINTA">
-                  <img src="../ProjectImages/Cover_APPOINTA.png" alt="APPOINTA">
-                  <div class="element">
-                    <h5 class="colorBlack">APPOINTA | Recruiter Appointment Scheduling</h5>
-                  </div>
-                </div>
-              </a>
-              <a href="/design_system/">
-                <div>
-                  <img src="../ProjectImages/vicky_website.png" alt="Design System">
-                  <div class="element">
-                    <h5 class="colorBlack">Design System | Efficiently Bulid &#38; Maintain Components</h5>
-                  </div>
-                </div>
-              </a>
-              <a href="/navigation/">
-                <div>
-                  <img src="../ProjectImages/vicky_website.png" alt="Navigation Design">
-                  <div class="element">
-                    <h5 class="colorBlack">Navigation Design | Secondary Menu Options for vickywang.me</h5>
-                  </div>
-                </div>
-              </a>
-
-            </div>
-          </li>
-
-          <li class="nav-item inactive marginZero"><a href="/architecture" class="nav-link box ">ARCHITECTURE</a>
-          </li>
-          <li class="nav-item inactive marginZero"><a href="/photography" class="nav-link box ">PHOTOGRAPHY</a>
-          </li>
-          <li class="nav-item inactive marginZero"><a href="/blog" class="nav-link box ">BLOG</a>
-          </li>
-
-          <li class="nav-item inactive marginZero"><a href="/about" class="nav-link box ">ABOUT</a>
-          </li>
-        </ul>
-
-      </div>
-      <div class="hamburger">
-        <span class="bar GLORIFY"></span>
-        <span class="bar GLORIFY"></span>
-        <span class="bar GLORIFY"></span>
-      </div>
-    </div>
-  </nav>
-  <!-- header -->
+  <%- include(`${templatePath}/shared/progressBar`) %>
+  <%- include(`${templatePath}/shared/block_nav_header`, {
+    type:'back', 
+    currentPage: 'PROJECT',
+    PageUrl:`/`
+    }) %>
 
   <!-- Working process -->
   <div class="colorBgGLORIFY">
