--- a/templates/shared/block_banner.ejs
+++ b/templates/shared/block_banner.ejs
@@ -19,12 +19,23 @@
   bannerSubTitle = ''; 
 } 
 %>
-
+<% if (typeof phoneBanner === 'undefined') { 
+  phoneBanner = ''; 
+} 
+%>
   <div class="<%= bannerBgColor %>">
     <div class="blankPhone"></div>
-    <div class="blankHS"></div>
+    <% if (phoneBanner === '' ) { %>
+      <div class="blankHS"></div>
+    <% } else { %>
+    <% } %>
+
+
     <div class="ProjectBanner displayLaptop">
+      <% if (phoneBanner === '' ) { %>
       <div class="blankMin1880"></div>
+      <% } else { %>
+      <% } %>
       <img src="<%- bannerMockupL %>" alt="Mockup">
       <div class="ProjectBannerInnerND">
         <img class="widthXXS" src="<%- bannerLogoUrl %>" alt="Logo">
@@ -35,7 +46,10 @@
       </div>
     </div>
     <div class="ProjectBanner displayTablet">
+      <% if (phoneBanner === '' ) { %>
       <div class="blankMin1880"></div>
+      <% } else { %>
+      <% } %>
       <img class="displayTablet" src="<%- bannerMockupM %>" alt="APPOINTA">
       <div class="ProjectBannerInnerND">
         <img class="widthXXS" src="<%- bannerLogoUrl %>" alt="Logo">
@@ -46,7 +60,10 @@
       </div>
     </div>
     <div class="ProjectBanner displayPhone">
+      <% if (phoneBanner === '' ) { %>
       <div class="blankMin1880"></div>
+      <% } else { %>
+      <% } %>
       <img class="displayPhone" src="<%- bannerMockupS %>" alt="APPOINTA">
       <div class="ProjectBannerInnerND">
         <img class="widthXXS" src="<%- bannerLogoUrl %>" alt="Logo">
