--- a/templates/shared/block_nav_header.ejs
+++ b/templates/shared/block_nav_header.ejs
@@ -109,9 +109,11 @@
 <header>
   <nav class="header" id="header">
     <div class="backgroundColorNav">
-      <a href="<%- PageUrl %>" class="widthFitContent centerVer logo pointer Grid--center"> 
-        <img class="moveLeftRight iconS" src="<%= websitePath %>/icon/arrow-back.svg" alt="Go back">
-        <h6>BACK</h6>
+      <a href="<%- PageUrl %>" class="widthFitContent marginM centerVer pointer Grid--center"> 
+        <div class="arrow-container moveBackArrow">
+          <div class="left-arrow"></div>
+       </div>
+       <h4 class="fontWeight400">BACK</h4>
       </a>
       <div class="navbar">
         <ul class="nav-menu">
